adding second pie chart to file

--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -2598,11 +2598,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "c2c62305",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        5.263158\n",
+       "Suburban    26.315789\n",
+       "Urban       68.421053\n",
+       "Name: ride_id, dtype: float64"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ride_percents=100*pyber_data_df.groupby(['type']).count()['ride_id']/pyber_data_df['ride_id'].count()\n",
+    "ride_percents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dda25065",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "city_type=['Rural','Urban','Suburban']\n",
+    "\n",
+    "#Build Pie Chart\n",
+    "plt.pie(ride_percents, \n",
+    "        labels=city_type,\n",
+    "       explode = [0,0,0.1],\n",
+    "        colors=['gold', 'lightskyblue', 'lightcoral'],\n",
+    "       autopct='%1.1f%%',\n",
+    "       shadow=True, startangle=150)\n",
+    "#Create title\n",
+    "plt.title('% of Total Fares by City Type')\n",
+    "#change font size\n",
+    "mpl.rcParams['font.size']=14\n",
+    "#save figure\n",
+    "plt.savefig('Analysis/Fig5.png')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
