--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -2143,7 +2143,7 @@
     "ax.grid()\n",
     "\n",
     "#Save the figure\n",
-    "plt.savefig('Analysis/fig2.png')\n",
+    "plt.savefig('Analysis/Fig2.png')\n",
     "plt.show"
    ]
   },
